# Coxyz-CLI

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/coxyz/: __init__.py  cli.py  config.py  default_config.yaml  policy.py  scaffold.py  system.py
src/coxyz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/coxyz/templates/: compose.yaml.tpl
tests/: test_acl.py  test_apply_flow.py
